--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "hbs": "^4.0.5",
+    "mustache": "^3.1.0",
+    "mysql": "^2.17.1",
     "pug": "^2.0.4"
-  }
+  },
+  "proxy": "http://localhost:3306"
 }
